force-app/main/default/objects/Salesforce_ACV__c/Salesforce_ACV__c.object-meta.xml
<CustomObject>
    <description>Custom object related to the Opportunity that is used to manage the Salesforce ACV information</description>
    <label>Salesforce ACV</label>
    <nameField>
        <displayFormat>ACV{YY}-{0000}</displayFormat>
        <label>Salesforce ACV Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce ACV</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>