force-app/main/default/objects/Salesforce_ACV__c/fields/ACV_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>ACV_Close_Date__c</fullName>
    <description>he close date that license are slated to close for our Partner.</description>
    <inlineHelpText>he close date that license are slated to close for our Partner.</inlineHelpText>
    <label>ACV Close Date</label>
    <type>Date</type>
</CustomField>