force-app/main/default/objects/Salesforce_ACV__c/fields/ACV_Update__c.field-meta.xml
<CustomField>
    <fullName>ACV_Update__c</fullName>
    <description>his field is used to provide a qualitative update on the status of ACV. When populating an update please include date of update and your initials. (i.e. 7/21 JS)</description>
    <inlineHelpText>his field is used to provide a qualitative update on the status of ACV. When populating an update please include date of update and your initials. (i.e. 7/21 JS)</inlineHelpText>
    <label>ACV Update</label>
    <type>TextArea</type>
</CustomField>