force-app/main/default/objects/Salesforce_ACV__c/fields/Closed_Past_60_Days__c.field-meta.xml
<CustomField>
    <fullName>Closed_Past_60_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark True, if the Salesforce licenses have closed in the past 60 days</description>
    <inlineHelpText>Mark True, if the Salesforce licenses have closed in the past 60 days</inlineHelpText>
    <label>Closed Past 60 Days</label>
    <type>Checkbox</type>
</CustomField>