force-app/main/default/objects/Salesforce_ACV__c/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <description>This field denotes the status of the software license on this opportunity. The stages used are the sales stages that are leveraged by Salesforce</description>
    <inlineHelpText>This field denotes the status of the software license on this opportunity. The stages used are the sales stages that are leveraged by Salesforce</inlineHelpText>
    <label>Licenses Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - Identifying an Opportunity</fullName>
            </value>
            <value>
                <fullName>02 - Determining Problem, Impact, Ideal</fullName>
            </value>
            <value>
                <fullName>03 - Validating Benefits &amp; Value</fullName>
            </value>
            <value>
                <fullName>04 - Confirming Value with Power</fullName>
            </value>
            <value>
                <fullName>05 - Negotiating $$ &amp; Mutual Plan</fullName>
            </value>
            <value>
                <fullName>06 - Finalizing Closure</fullName>
            </value>
            <value>
                <fullName>07 - ISV Dead Opty</fullName>
            </value>
            <value>
                <fullName>08 - Closed</fullName>
            </value>
            <value>
                <fullName>Dead - Duplicate</fullName>
            </value>
            <value>
                <fullName>Dead - Lost</fullName>
            </value>
            <value>
                <fullName>Dead - No Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>