force-app/main/default/objects/Salesforce_ACV__c/fields/Licenses__c.field-meta.xml
<CustomField>
    <fullName>Licenses__c</fullName>
    <description>Denotes if there are software licenses being positioned and sold by one of our ISV partners in parallel to ATG&apos;s service deal cycle</description>
    <inlineHelpText>Denotes if there are software licenses being positioned and sold by one of our ISV partners in parallel to ATG&apos;s service deal cycle</inlineHelpText>
    <label>Licenses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No – ($0 credit)</fullName>
            </value>
            <value>
                <fullName>Yes – Co-selling, credit not yet awarded</fullName>
            </value>
            <value>
                <fullName>Yes – Co-selling, credit awarded</fullName>
            </value>
            <value>
                <fullName>Unsure &amp; seeking support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>