force-app/main/default/objects/Salesforce_ACV__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Create a look-up relationship to the Opportunity associated with this ACV record</description>
    <inlineHelpText>Create a look-up relationship to the Opportunity associated with this ACV record</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Salesforce ACV</relationshipLabel>
    <relationshipName>Salesforce_ACV</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>