force-app/main/default/objects/Salesforce_ACV__c/fields/Salesforce_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Opportunity_Name__c</fullName>
    <description>Name of Opportunity from Salesforce pipeline report</description>
    <inlineHelpText>Name of Opportunity from Salesforce pipeline report</inlineHelpText>
    <label>Salesforce Opportunity Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>